--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
             <li><a class="active" href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#work">Work</a></li>
+            <li><a href="#Projects">Work</a></li>
             <li><a href="#experience">Experience</a></li>
             <li><a href="#contact">Contact</a></li>
             </ul>
@@ -127,7 +126,7 @@
 <!-- skills section ends -->
 
 
-<!-- education section starts -->
+<!-- education section starts
 <section class="education" id="education">
 
   <h1 class="heading"><i class="fas fa-graduation-cap"></i> My <span>Education</span></h1>
@@ -141,11 +140,11 @@
         <img draggable="false" src="./assets/images/educat/college.jpg" alt="">
         </div>
         <div class="content">
-        <h3>Bachelor of Engineering in Information Technology</h3>
+        <h3>Bachelor of Science in Information Technology</h3>
         <p>Zeal College of engineering and research | SPPU</p>
         <h4>2020-2024 | Pursuing</h4>
         </div>
-    </div>
+    </div> 
 
     <div class="box">
       <div class="image">
@@ -160,11 +159,11 @@
 
 </div>
 </section>
-<!-- education section ends -->
+ education section ends -->
 
 
 <!-- work project section starts -->
-<section class="work" id="work">
+<section class="Projects" id="work">
 
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
 
