--- a/experience/index.html
+++ b/experience/index.html
@@ -45,11 +45,11 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Self Employed</h2>
+          <h2>Metropolitan Transit Auhority</h2>
         </div>
         <div class="desc">
-            <h3>Full Stack Developer</h3>
-            <p>Oct 2021 - present</p>
+            <h3> Data Analyst</h3>
+            <p>June 2024 - December 2024</p>
         </div>
       </div>
     </div>
