--- a/experience/index.html
+++ b/experience/index.html
@@ -81,11 +81,11 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>Mapstreak Flyseas</h2>
+          <h2>Powerweave Technologies</h2>
         </div>
         <div class="desc">
-            <h3>Web Developer | Internship</h3>
-            <p>June 2021 - Dec 2021</p>
+            <h3>Data Analyst | Internship</h3>
+            <p>Feb 2023 - May 2023</p>
         </div>
       </div>
     </div>
