--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>Self Employed</h2>
+          <h2>Metropolitan Transportation Authority</h2>
         </div>
         <div class="desc">
-            <h3>Full Stack Developer</h3>
-            <p>Oct 2021 - present</p>
+            <h3>Data Analyst</h3>
+            <p>June 2024 2021 - Decemeber 2024</p>
         </div>
       </div>
     </div>
@@ -218,11 +218,11 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Mapstreak Flyseas</h2>
+          <h2>Powerweave Technologies</h2>
         </div>
         <div class="desc">
-            <h3>Web Developer | Internship</h3>
-            <p>June 2021 - Dec 2021</p>
+            <h3>Junior Data Engineer | Internship</h3>
+            <p>Febuary 2023 - May 2023</p>
         </div>
       </div>
     </div>
@@ -230,11 +230,11 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>The Spark Foundation</h2>
+          <h2>Deloitte USI</h2>
         </div>
         <div class="desc">
-            <h3>Website Developer | Internship</h3>
-            <p>May 2021 - June 2021</p>
+            <h3> Associate Analyst </h3>
+            <p>May 2022 - Nov 2023</p>
         </div>
       </div>
     </div>
@@ -242,47 +242,14 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>The Spark Foundation</h2>
+          <h2>Your Learning Platform</h2>
         </div>
         <div class="desc">
-            <h3>Mobile Application Developer | Internship</h3>
-            <p>April 2021 - May 2021</p>
+            <h3>Data Analyst</h3>
+            <p> June 2021 - April 2022</p>
         </div>
       </div>
     </div>
-
-    <div class="container right">
-      <div class="content">
-        <div class="tag">
-          <h2>Frshr Technologies</h2>
-        </div>
-        <div class="desc">
-            <h3>Wordpress Developer | Internship</h3>
-            <p>April 2021 - April 2021</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>WonderingBlog</h2>
-        </div>
-        <div class="desc">
-            <h3>Web Development & SEO | Internship</h3>
-            <p>March 2021 - April 2021</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="morebtn">
-    <a href="/experience" class="btn"><span>View All</span>
-      <i class="fas fa-arrow-right"></i>
-  </a>
-  </div>
-</div>
-</section>
 <!-- experience section ends -->
 
 <!-- contact section starts -->
