--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
         <ul class="social-icons">
           <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/varshilmehta99/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
           <li><a class="github" aria-label="GitHub" href="https://github.com/varshil99" target="_blank"><i class="fab fa-github"></i></a></li>
-          <li><a class="twitter" aria-label="Twitter" href="https://twitter.com/jigar_sable" target="_blank"><i class="fab fa-twitter"></i></a></li>
-          <li><a class="telegram" aria-label="Telegram" href="https://t.me/lifecode5" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
-          <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/jigarsable.dev"><i class="fab fa-instagram" target="_blank"></i></a></li>
-          <li><a class="dev" aria-label="Dev" href="https://dev.to/jigarsable" target="_blank"><i class="fab fa-dev"></i></a></li>
+          <li><a class="twitter" aria-label="Twitter" href="https://x.com/mocker_varshil" target="_blank"><i class="fab fa-twitter"></i></a></li>
+          <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/mr_vrmehta_/"><i class="fab fa-instagram" target="_blank"></i></a></li>
+
         </ul>
       </div>
     </div>
