--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <!-- skills section ends -->
 
 <!-- work project section starts -->
-<section class="Projects" id="work">
+<section class="Projects" id="Projects">
 
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
 
