--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 </div>
 
 <div class="viewall">
-  <a href="#projects" class="btn"><span>View All</span>
+  <a href="/projects" class="btn"><span>View All</span>
     <i class="fas fa-arrow-right"></i>
 </a>
 </div>
