--- a/projects/index.html
+++ b/projects/index.html
@@ -65,7 +65,7 @@
   </div>
 
   <div class="backbtn">
-    <a href="/#Projects" class="btn">
+    <a href="/#work" class="btn">
         <i class="fas fa-arrow-left"></i>
         <span>Back to Home</span>
   </a>
