--- a/projects/index.html
+++ b/projects/index.html
@@ -8,7 +8,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link id='favicon' rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-png">
-    <title>Projects | Portfolio Jigar Sable</title>
+    <title>Projects | Portfolio Varshil Mehta</title>
 </head>
 <body oncontextmenu="return false">
 
@@ -46,7 +46,7 @@
 
   <div class="box-container">
 
-    <div class="box tilt">
+   <!-- <div class="box tilt">
       <img src="/assets/images/projects/agecalc.PNG" alt="" />
       <div class="content">
         <div class="tag">
@@ -69,7 +69,7 @@
         <i class="fas fa-arrow-left"></i>
         <span>Back to Home</span>
   </a>
-  </div>
+  </div>-->
 
 </section>
 <!-- work project section ends -->
