--- a/index.html
+++ b/index.html
@@ -135,7 +135,6 @@
         </div>
       </div>
     </div> 
-
 </div>
 
 <div class="viewall">
@@ -143,7 +142,7 @@
     <i class="fas fa-arrow-right"></i>
 </a>
 </div>
-
+</div>
 </section>
 <!-- work project section ends -->
 
