--- a/projects/index.html
+++ b/projects/index.html
@@ -46,8 +46,8 @@
 
   <div class="box-container">
 
-    <!-- <div class="box tilt">
-      <img src="/assets/images/projects/agecalc.PNG" alt="" />
+    <div class="box tilt">
+      <img src="./assets/images/projects/agecalc.PNG" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Portfolio Website</h3>
@@ -60,7 +60,7 @@
           </div>
         </div>
       </div>
-    </div> -->   
+    </div>   
 
   </div>
 
