--- a/projects/index.html
+++ b/projects/index.html
@@ -46,7 +46,7 @@
 
   <div class="box-container">
 
-    <div class="box tilt">
+   <!-- <div class="box tilt">
       <img src="./assets/images/projects/agecalc.PNG" alt="" />
       <div class="content">
         <div class="tag">
@@ -60,12 +60,12 @@
           </div>
         </div>
       </div>
-    </div>   
+    </div> -->  
 
   </div>
 
   <div class="backbtn">
-    <a href="/#work" class="btn">
+    <a href="/#Projects" class="btn">
         <i class="fas fa-arrow-left"></i>
         <span>Back to Home</span>
   </a>
