--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
       <!-- scroll reveal anim -->
       <script src="https://unpkg.com/scrollreveal"></script>
 
-      <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
       <!-- ==== ALL MAJOR JAVASCRIPT CDNS ENDS ==== -->
 
