--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
 
         <div class="resumebtn">
-          <a href="DS.pdf" target="_blank" class="btn"><span>Resume</span>
+          <a href="Varshil_Mehta_Resume_DEN.pdf" target="_blank" class="btn"><span>Resume</span>
             <i class="fas fa-chevron-right"></i>
           </a>
         </div>
