--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           </div>
           <div class="desc">
             <h3>Data Analyst</h3>
-            <p>June 2024 2021 - Decemeber 2024</p>
+            <p>June 2024 - Decemeber 2024</p>
           </div>
         </div>
       </div>
