--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords"
-    content="Varshil Mehta, a portfolio, Varshil, full stack dev, personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio" />
+    content="Varshil Mehta, a portfolio, Varshil, Data Specialist, personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio" />
   <meta name="description"
     content="Welcome to Varshil's Portfolio. Full-Stack Web Developer and Android App Developer" />
   <!-- Custom CSS -->
