--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
 
         <div class="resumebtn">
-          <a href="Varshil_Mehta_Resume_DEN.pdf" target="_blank" class="btn"><span>Resume</span>
+          <a href="Resume.pdf" target="_blank" class="btn"><span>Resume</span>
             <i class="fas fa-chevron-right"></i>
           </a>
         </div>
@@ -155,7 +155,7 @@
     </div>
 
     <div class="viewall">
-      <a href="#projects" class="btn"><span>View All</span>
+      <a href="/projects" class="btn"><span>View All</span>
         <i class="fas fa-arrow-right"></i>
       </a>
     </div>
