--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords"
     content="Varshil Mehta, a portfolio, Varshil, Data Specialist, personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio" />
   <meta name="description"
-    content="Welcome to Varshil's Portfolio. Full-Stack Web Developer and Android App Developer" />
+    content="Welcome to Varshil's Portfolio" />
   <!-- Custom CSS -->
   <link rel="stylesheet" href="./assets/css/style.css">
   <!-- Font Awesome -->
